Parallelization (#47)
- makes a lot of things async
  - path trials can happen in parallel if multiple dedicated threads are set via a "work" manager
  - getting chunk data (and block data) happens on a request queue
- adds dedicated threads config parameter
- proxy block/chunk classes are introduced, and now most modes are moved to common library, using the proxy blocks
- fix listing waypoints and traveling to other players' waypoints if the player is offline
- add validation checks to (integer) config parameters
- fix using cached paths in searches
- fix building caches with path-cache-build command
- ray-trace modes are evaluated less frequently to reduce search latency
- add license to files